# ChangeLog for media-sound/mixxx
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  20 Dec 2014; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  mixxx-9999.ebuild, -files/mixxx-9999-cflags.patch,
  files/mixxx-9999-system-libs.patch:
  update system-libs patch
  remove cflags patch
  depend on newer version of fidlib

  02 Mar 2014; Dominique Michel <dominique_libre@users.sourceforge.net>
  mixxx-9999-system-libs.patch: updated for new offsets.
  Thanks to Alex Barker for the updated patch.

  08 Mar 2014; Matt Henley (nwmatt) <nwmatt@gmail.com>
  mixxx-9999-docs.patch: updated for new offset.
  Thanks to Alex Barker for updated patch.

  08 Dec 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  mixxx-9999.ebuild, files/mixxx-9999-cflags.patch,
  -files/mixxx-9999-no-bzr.patch, files/mixxx-9999-system-libs.patch:
  Updated patches and removed 9999-no-bzr patch because it functions 
  correctly upstream. Thanks to Alex Barker for updated ebuild and patches.
  Added missing dependency on dev-qt/qttest.

  08 Dec 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  mixxx-9999.ebuild:
  Added dependency on media-libs/rubberband. Thanks to Alex Barker for updated
  ebuild.

  25 Jul 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  mixxx-1.11.0.ebuild, mixxx-1.11.9999.ebuild, mixxx-9999.ebuild:
  Correct HOMEPAGE (www.mixxx.org).
  Depend on >=media-libs/fidlib-0.9.10-r1.
  Follow mixxx's git repository in mixxx-9999.ebuild.
  Comment out non-working mixxx-1.11.9999-no-bzr.patch.
  Thanks to Alex Barker for the fixed ebuild.

  23 Jun 2013; Hakan Demiralp (keenblade) <keenblade@tuxfamily.org>
  mixxx-1.11.0.ebuild, mixxx-1.11.9999.ebuild, mixxx-9999.ebuild:
  mixxx: for all mixxx ebuilds, fidlib dependency version is adjusted to the
  available portage version

*mixxx-1.11.0 (23 May 2013)

  23 May 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>