@@ -7,10 +7,10 @@ AUX mixxx-1.11.9999-docs.patch 438 SHA256 19377d095e34071010ddda59b03b86a63b82f2
 AUX mixxx-1.11.9999-no-bzr.patch 1468 SHA256 6075410573cd0911623dd0a160cdefe6a48c3f335eeef682d80eebf52b75446e SHA512 d5aa2071a836cad7c995f1e83af3ee06687a4444845583013df2023bc11f58a626c1f887fe49385b562d26d70a156383ba47d4dd6ae61b194790b1ac498e8f7c WHIRLPOOL ff247e659c62bbbe3f0989c78a284c9ea6815e162e185b6fa8844775521d268fbfbed59197b27d2949376f7db070b8aa9a4f4bf5ce9d674c8d763df9908cc0fe
 AUX mixxx-1.11.9999-system-libs.patch 8072 SHA256 996c6a170e06a5b4b0250f6fcefd80be8cb6d51325ee19c231360f1892567cb1 SHA512 d8d6ab9162b365288e224bfe2611c3322d539e35284c26ede0c829a29508a1047ad8e28c08bc769a0c72bfc70e69ebca71ac8e0217fb78c5904582153c1ae267 WHIRLPOOL 0fffac4355f882e01fefaaca19cdbf9cc048d1ef6892f2451c7e7163ad19fa17e41685980acb8cd62d4530010f3ec88db8962827d35fb9f9ec5ff564adaafa89
 AUX mixxx-9999-docs.patch 445 SHA256 9250ab6b2368ad03b8c54d767fda1d23cd826340189cf8989a3156b76b375411 SHA512 cad756af2cfc90433b20d0a867aed9b85ee822691c5c8adc97de6943273823a769d8e6d4912a71f00bbead2cd96cff91cc12fb2fb8de547bf76dabd74372490e WHIRLPOOL 91b48e4577ff127065bbcae34d945613029850b43831209cc1b1f9c2d1da7fc3c02c9fa96dd958fe85f934749bcbace1b2c6c3c358306dc6d6ea91935337a327
-AUX mixxx-9999-system-libs.patch 7177 SHA256 9d93444cb21ccbf99b80b755a080b3c36d63050f1eb8d7c729b8298f8d0bc500 SHA512 9ef3beac445358843c24d4aac5eeb9ffd99642fa1e6449bebd8ca4659f381225d60f5ea46751c9317fa5831940a697a43875dcb5dfc999bf298436ef010beb20 WHIRLPOOL 8bfb34fe2957350d22a677fa074267b1c60a766f89792d4755831d44e69700a4d62dfb4cc22faa0004841c96ad4a1b043cf1e47e47dab840b493ad52c2b7e263
+AUX mixxx-9999-system-libs.patch 6867 SHA256 687975453918d6ded0379091e88c6469a909284ce5e5aa3dc942921982c59e59 SHA512 e9427e4c170321ce975de557e4b0d7ad442807fa72ac7a58c80db12c8cf44d1ba63005eeaa2545b1dee4db5250d049f0a0d40235e41ced75aaf8247349241ec1 WHIRLPOOL 440326c32b69f5b865dea7a35b1f6af770db4909512b13fc1b8418f8ce52a28bd990f04fb850969269e023009458a1cc6efa0c537c2a6a8997c48a8f158f0a35
 DIST mixxx-1.11.0-src.tar.gz 24473835 SHA256 00961b5d6c1e6d6686d76e55de474b943bbeff4e59b163dddd3d9940dc1b0331 SHA512 a42c2e3a648986e401f9812315942b5c68e0bc4f47ce867eb043d64f9d7836860e414b04b5e5da52b0541da5069d231774f30e965bcf3bd0db09f6bca74876c2 WHIRLPOOL 9ab4de6bfa5840500f04a4e7d523b6546e0ef08ade017f14b73425e205f039a6da11604f2b0e902085ff3062fff451385f984735029592d4b10ac3d4e0c985b1
 EBUILD mixxx-1.11.0.ebuild 2268 SHA256 3073dae0132a766076bef6ea221a524ebc0e3a31f2c1d60cab1fad902bb4b4b3 SHA512 441141d4c366cff455998cbd42daed61e745b91940b39dccc5f4a3cce268dcd16d1ae7b1e55033bf53f68a7c65aa486f9f91b571c5888d02d8d1b7f43934168d WHIRLPOOL 895a2e2288c6e46298c4bd31dff4ca1fb900b1c324906b27c0e1efbedc5499c0a727afc8bd8cd168f3af944c9e3e00e382271dfa9ee88111889a203d9c078658
 EBUILD mixxx-1.11.9999.ebuild 2263 SHA256 3d0226957b626e92f6ba2f9d6a7b2d764f6282f940ef77bd534b11fb609b1fc8 SHA512 b94e1a928cbb6f12abb19e0080bb098c58f4458010b866feb6358f745d72208524369e55d3ed8e06c24ef315426a85e9d14263faf52e54e14fdbb9846bb30ccf WHIRLPOOL 2117ce352078cd1e2ca9e8c7abd7d91e61d13b9a18ab3ec880b462c332e8a413b130bc1af150136a0beab41ccbb81bdc229c4bb29f14c673c8a3a24ffd3136c3
 EBUILD mixxx-9999.ebuild 2274 SHA256 aecdf1ee0d06e3dcaf6bd4a13f5b75abaf7c38b710f943d21bf284d7abb1aece SHA512 480a0f083db88c011b6e9bbf7b313c07d3a43d043d262feccfaac826ade7086a94f13353ba80aec4fb7d858419b44395b7f29b790fb174f6b9ad2372c69b19fe WHIRLPOOL 446aec1c8820aa1b11a716f795d920ca801eefb9cb21f7d7462de89e5cc37942154af5dc2b06570ca6b6fcfc81e874689e8d6aca4afd97489009f8920e9e3106
-MISC ChangeLog 7853 SHA256 aae49fa4008b5a1c51ac67bc8f8417b957a9cf78cfb61b28587c5612af2423da SHA512 ac90613974fee38c857c0769e680dd343869e6d5caecfe1f51608c4e29cea70686ac97de63e183032b45689f2522a37ae1fbbe3360855b35a4c42ba9bbd79239 WHIRLPOOL 549f652d0058489695b9d779eb4deade4b828aa48bab6baf45d0dd409e7e12e8cc16f0bc45eae1a6c22a2389e9cab2e1be10238345be72864ccbeed69413ef51
+MISC ChangeLog 8033 SHA256 2876d58d75b4edb0a2697cd0ce32b33c8698dd3ec9e3e1da90cd6c7b9fbacc9b SHA512 b813c9fe8b6a88abe4715d55a987fc69d04d01d02f207eb7a91e095f45ce4d49a88e3b8cb18c14e9392ef49094c4a621d999a9b83602f6768473d5a0026baadc WHIRLPOOL 75d8da906619098e51b008174ce4f2ced8d000c639c3c677301ff5b3ddda149096070fe8db3bb24afb2fb63f5d68e7907a863510bd612b2ebf052af67a153d37
 MISC metadata.xml 485 SHA256 2d28e5b3222a404cd0ae26b12d70640ed15c665204a43496862b77f0396f2038 SHA512 cf3578bae5e75f6b5db4ca71cd00a9389878d87d0983b0c5e0b2858336bd30186df13c58b03b9f1f2e698b651d360058ed0ff63771be6ba98128ae30b886d7f7 WHIRLPOOL 275c04e470f80968e15e0c3ef77cfa4f6fe89917b01ce1d94ea7bebdfd30ee54baae32678d79e7d28dde24bd0f4ad1f8756f185638e77421ab22ebca8e42c555
