@@ -1,5 +1,5 @@
 diff --git a/build/depends.py b/build/depends.py
-index ad71733..a33d68e 100644
+index 77f4c4f..a3d0df0 100644
 --- a/build/depends.py
 +++ b/build/depends.py
 @@ -347,25 +347,10 @@ class TestHeaders(Dependence):
@@ -27,47 +27,36 @@ index ad71733..a33d68e 100644
 -        build.env.Append(CPPPATH='#lib/fidlib-0.9.10/')
 +        if not conf.CheckLib('fidlib'):
 +            raise Exception('Did not find fidlib library, exiting!')
-+        build.env.Append(CPPPATH=[SCons.ARGUMENTS.get('prefix') + '/include/fidlib']) 
++        build.env.Append(CPPPATH=[SCons.ARGUMENTS.get('prefix') + '/include/fidlib'])
  
  
  class ReplayGain(Dependence):
-@@ -378,7 +363,6 @@ class ReplayGain(Dependence):
+@@ -378,42 +363,17 @@ class ReplayGain(Dependence):
  
  
  class SoundTouch(Dependence):
 -    SOUNDTOUCH_PATH = 'soundtouch-1.8.0'
  
-     def sse_enabled(self, build):
-         optimize = int(util.get_flags(build.env, 'optimize', 1))
-@@ -387,41 +371,15 @@ class SoundTouch(Dependence):
-                 (build.toolchain_is_gnu and optimize > 1))
- 
      def sources(self, build):
--        sources = ['engine/enginebufferscalest.cpp',
--                   '#lib/%s/AAFilter.cpp' % self.SOUNDTOUCH_PATH,
--                   '#lib/%s/BPMDetect.cpp' % self.SOUNDTOUCH_PATH,
--                   '#lib/%s/FIFOSampleBuffer.cpp' % self.SOUNDTOUCH_PATH,
--                   '#lib/%s/FIRFilter.cpp' % self.SOUNDTOUCH_PATH,
--                   '#lib/%s/InterpolateCubic.cpp' % self.SOUNDTOUCH_PATH,
--                   '#lib/%s/InterpolateLinear.cpp' % self.SOUNDTOUCH_PATH,
--                   '#lib/%s/InterpolateShannon.cpp' % self.SOUNDTOUCH_PATH,
--                   '#lib/%s/PeakFinder.cpp' % self.SOUNDTOUCH_PATH,
--                   '#lib/%s/RateTransposer.cpp' % self.SOUNDTOUCH_PATH,
--                   '#lib/%s/SoundTouch.cpp' % self.SOUNDTOUCH_PATH,
--                   '#lib/%s/TDStretch.cpp' % self.SOUNDTOUCH_PATH]
--
--        # SoundTouch CPU optimizations are only for x86
--        # architectures. SoundTouch automatically ignores these files when it is
--        # not being built for an architecture that supports them.
--        sources.append('#lib/%s/cpu_detect_x86.cpp' % self.SOUNDTOUCH_PATH)
--
--        # Check if the compiler has SSE extention enabled
--        # Allways the case on x64 (core instructions)
--        if self.sse_enabled(build):
--            sources.extend(
--                ['#lib/%s/mmx_optimized.cpp' % self.SOUNDTOUCH_PATH,
--                 '#lib/%s/sse_optimized.cpp' % self.SOUNDTOUCH_PATH, ])
--        return sources
+-        return ['engine/enginebufferscalest.cpp',
+-                '#lib/%s/AAFilter.cpp' % self.SOUNDTOUCH_PATH,
+-                '#lib/%s/BPMDetect.cpp' % self.SOUNDTOUCH_PATH,
+-                '#lib/%s/FIFOSampleBuffer.cpp' % self.SOUNDTOUCH_PATH,
+-                '#lib/%s/FIRFilter.cpp' % self.SOUNDTOUCH_PATH,
+-                '#lib/%s/InterpolateCubic.cpp' % self.SOUNDTOUCH_PATH,
+-                '#lib/%s/InterpolateLinear.cpp' % self.SOUNDTOUCH_PATH,
+-                '#lib/%s/InterpolateShannon.cpp' % self.SOUNDTOUCH_PATH,
+-                '#lib/%s/PeakFinder.cpp' % self.SOUNDTOUCH_PATH,
+-                '#lib/%s/RateTransposer.cpp' % self.SOUNDTOUCH_PATH,
+-                '#lib/%s/SoundTouch.cpp' % self.SOUNDTOUCH_PATH,
+-                '#lib/%s/TDStretch.cpp' % self.SOUNDTOUCH_PATH,
+-                # SoundTouch CPU optimizations are only for x86
+-                # architectures. SoundTouch automatically ignores these files
+-                # when it is not being built for an architecture that supports
+-                # them.
+-                '#lib/%s/cpu_detect_x86.cpp' % self.SOUNDTOUCH_PATH,
+-                '#lib/%s/mmx_optimized.cpp' % self.SOUNDTOUCH_PATH,
+-                '#lib/%s/sse_optimized.cpp' % self.SOUNDTOUCH_PATH]
 +        return ['engine/enginebufferscalest.cpp']
  
      def configure(self, build, conf, env=None):
@@ -75,9 +64,13 @@ index ad71733..a33d68e 100644
              env = build.env
 -        env.Append(CPPPATH=['#lib/%s' % self.SOUNDTOUCH_PATH])
 -
--        # If we do not want SSE optimizations (either the architecture does not
--        # support it or we are running a non-optimized build) then disable them.
--        if not self.sse_enabled(build):
+-        # Prevents circular import.
+-        from features import Optimize
+-
+-        # If we do not want optimizations then disable them.
+-        optimize = (build.flags['optimize'] if 'optimize' in build.flags
+-                    else Optimize.get_optimization_level())
+-        if optimize == Optimize.LEVEL_OFF:
 -            env.Append(CPPDEFINES='SOUNDTOUCH_DISABLE_X86_OPTIMIZATIONS')
 +        if not conf.CheckLib(['SoundTouch','libSoundTouch']):
 +            raise Exception('Did not find SoundTouch library, exiting!')
@@ -87,7 +80,7 @@ index ad71733..a33d68e 100644
  
  class RubberBand(Dependence):
 diff --git a/build/features.py b/build/features.py
-index b61de86..639e143 100644
+index 2ef1ecd..c100f3b 100644
 --- a/build/features.py
 +++ b/build/features.py
 @@ -45,7 +45,6 @@ class HSS1394(Feature):
@@ -109,7 +102,7 @@ index b61de86..639e143 100644
  
          if build.platform_is_linux:
              build.env.ParseConfig(
-@@ -89,23 +84,17 @@ class HID(Feature):
+@@ -89,23 +84,18 @@ class HID(Feature):
              build.env.AppendUnique(FRAMEWORKS=['IOKit', 'CoreFoundation'])
  
          build.env.Append(CPPDEFINES='__HID__')
@@ -118,6 +111,7 @@ index b61de86..639e143 100644
 +            raise Exception('Did not find HID API library, exiting!')
 +        build.env.Append(CPPPATH=[SCons.ARGUMENTS.get('prefix') + '/include/hidapi'])
 +        build.env.Append(LIBS='hidapi-libusb')
++
  
      def sources(self, build):
          sources = ['controllers/hid/hidcontroller.cpp',
@@ -138,7 +132,7 @@ index b61de86..639e143 100644
          return sources
  
  
-@@ -717,24 +706,15 @@ class TestSuite(Feature):
+@@ -717,24 +707,15 @@ class TestSuite(Feature):
          test_env.Append(CCFLAGS='-pthread')
          test_env.Append(LINKFLAGS='-pthread')
  
