@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/mixxx
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  16 Mar 2015; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
+  files/mixxx-9999-system-libs.patch:
+  updated mixxx-9999-system-libs.patch, thanks to Alex Barker for the patch
 
   20 Dec 2014; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
   mixxx-9999.ebuild, -files/mixxx-9999-cflags.patch,
